--- a/Excellent Project/Base.lproj/LaunchScreen.storyboard
+++ b/Excellent Project/Base.lproj/LaunchScreen.storyboard
@@ -18,9 +18,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Car Finder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0n-MG-QqD">
-                                <rect key="frame" x="28" y="20" width="318" height="83"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Car Finder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y0n-MG-QqD">
+                                <rect key="frame" x="28" y="15.5" width="318" height="87.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="73"/>
                                 <color key="textColor" red="0.54321104288101196" green="0.083707310259342194" blue="0.50615614652633667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -39,6 +38,11 @@
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Y0n-MG-QqD" secondAttribute="bottom" constant="564" id="SEl-vq-KPG"/>
+                            <constraint firstItem="Y0n-MG-QqD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="Vid-f2-cAu"/>
+                            <constraint firstItem="Y0n-MG-QqD" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="zs7-Nr-rXz"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
